--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -1,171 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserHome.UserHome">
+    android:layout_gravity="left"
+    android:fitsSystemWindows="true"
+    android:layoutDirection="ltr"
+    android:textDirection="ltr"
+    tools:context=".UserHome.UserHome"
+    tools:openDrawer="left">
 
-
-    <ImageView
-        android:id="@+id/home_profile_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="@dimen/et_margin_start_end"
-        android:layout_marginTop="@dimen/et_margin_start_end"
-        android:src="@drawable/ic_person" />
-
-
-    <ImageView
-        android:id="@+id/home_logo_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp"
-        android:layout_marginBottom="5dp"
-        android:orientation="vertical"
-        android:src="@drawable/logo_text" />
-
-    <TextView
-        android:id="@+id/question_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/home_logo_text"
-        android:layout_marginStart="@dimen/et_margin_start_end"
-        android:text="What you would like to find?"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <LinearLayout
-        android:id="@+id/category_section"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/question_text"
-        android:padding="15dp"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal"
-        android:weightSum="3">
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/menu_drawer_btn"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginStart="@dimen/et_margin_start_end"
+            android:layout_marginTop="@dimen/et_margin_start_end"
+            android:src="@drawable/ic_baseline_menu_24" />
+
+        <ImageView
+            android:id="@+id/home_logo_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="45dp"
+            android:layout_marginBottom="5dp"
+            android:orientation="vertical"
+            android:src="@drawable/logo_text" />
+
+        <TextView
+            android:id="@+id/question_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/home_logo_text"
+            android:layout_marginStart="@dimen/et_margin_start_end"
+            android:text="What you would like to find?"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <LinearLayout
-            android:id="@+id/all_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            >
+            android:id="@+id/category_section"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/question_text"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal"
+            android:padding="15dp"
+            android:weightSum="4">
 
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:padding="10dp"
-                android:background="@drawable/button_shape_yellow"
-                android:src="@drawable/ic_all"
-                android:layout_gravity="center"
-                />
+            <LinearLayout
+                android:id="@+id/all_btn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/dark_gray"
-                android:layout_gravity="center"
-                android:text="All"
-                android:textStyle="bold"
-                android:layout_marginTop="@dimen/et_margin_vertical"
-                android:textSize="16sp"
-                />
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/button_shape_yellow"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_all" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/et_margin_vertical"
+                    android:text="All"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/hotel_btn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/button_shape_red"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_hotel" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/et_margin_vertical"
+                    android:text="Hotel"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/restaurant_btn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/button_shape_blue"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_resturant" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/et_margin_vertical"
+                    android:text="Restaurant"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/special_btn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/button_shape_blue"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_baseline_star_24" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/et_margin_vertical"
+                    android:text="Special Places"
+                    android:gravity="center"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
 
-        <LinearLayout
-            android:id="@+id/hotel_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            >
+        <TextView
+            android:id="@+id/home_no_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/category_section"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="50dp"
+            android:text="Sorry, No Results!"
+            android:textColor="@color/green_cyan"
+            android:textSize="30sp"
+            android:visibility="gone" />
 
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:padding="10dp"
-                android:background="@drawable/button_shape_red"
-                android:src="@drawable/ic_hotel"
-                android:layout_gravity="center"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/dark_gray"
-                android:layout_gravity="center"
-                android:text="Hotel"
-                android:textStyle="bold"
-                android:layout_marginTop="@dimen/et_margin_vertical"
-                android:textSize="16sp"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/restaurant_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            >
-
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:padding="10dp"
-                android:background="@drawable/button_shape_blue"
-                android:src="@drawable/ic_resturant"
-                android:layout_gravity="center"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/dark_gray"
-                android:layout_gravity="center"
-                android:text="Restaurant"
-                android:textStyle="bold"
-                android:layout_marginTop="@dimen/et_margin_vertical"
-                android:textSize="16sp"
-                />
-
-        </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/posts_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/category_section"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp" />
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
-    <TextView
-        android:id="@+id/home_no_result"
+
+    <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/category_section"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="50dp"
-        android:textSize="30sp"
-        android:visibility="gone"
-        android:text="Sorry, No Results!"
-        android:textColor="@color/green_cyan"
-        />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/posts_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/category_section"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        />
+        <include
+            layout="@layout/custome_drawer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.google.android.material.navigation.NavigationView>
 
 
-
-
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
