--- a/app/src/main/res/layout/fragment_admin_main_page.xml
+++ b/app/src/main/res/layout/fragment_admin_main_page.xml
@@ -14,8 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="45dp"
-            android:layout_marginBottom="25dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:src="@drawable/logo_text" />
 
@@ -25,9 +24,10 @@
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:layout_below="@id/admin_logo_text"
-            android:layout_marginTop="@dimen/et_margin_start_end"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="35dp"
             android:orientation="vertical"
-            android:weightSum="2">
+            android:weightSum="3">
 
             <LinearLayout
                 android:id="@+id/admin_hotel_btn"
@@ -38,13 +38,12 @@
                 >
 
                 <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:padding="20dp"
-                    android:background="@drawable/button_shape_red"
-                    android:src="@drawable/ic_hotel"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_gravity="center"
-                    />
+                    android:background="@drawable/button_shape_red"
+                    android:padding="20dp"
+                    android:src="@drawable/ic_hotel" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -68,8 +67,8 @@
                 >
 
                 <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:padding="20dp"
                     android:background="@drawable/button_shape_blue"
                     android:src="@drawable/ic_resturant"
@@ -82,6 +81,35 @@
                     android:textColor="@color/dark_gray"
                     android:layout_gravity="center"
                     android:text="Restaurant"
+                    android:textStyle="bold"
+                    android:layout_marginTop="@dimen/et_margin_vertical"
+                    android:textSize="26sp"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/admin_special_btn"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                >
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/button_shape_green"
+                    android:padding="20dp"
+                    android:src="@drawable/ic_baseline_star_24" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/dark_gray"
+                    android:layout_gravity="center"
+                    android:text="Special"
                     android:textStyle="bold"
                     android:layout_marginTop="@dimen/et_margin_vertical"
                     android:textSize="26sp"
