--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="flowery_red">#DD808D</color>
     <color name="baby_blue">#85D0F3</color>
     <color name="transparent">#00ffffff</color>
-
+    <color name="text_shadow">#7F000000</color>
 
 </resources>
