--- a/app/src/main/res/values/dimentions.xml
+++ b/app/src/main/res/values/dimentions.xml
@@ -4,4 +4,19 @@
     <dimen name="et_margin_vertical">8dp</dimen>
     <dimen name="login_margin_vertical">20dp</dimen>
 
+
+    <dimen name="et_margin_mid_start_end">25dp</dimen>
+    <dimen name="et_margin_small_start_end">12dp</dimen>
+    <dimen name="et_margin_tiny_start_end">8dp</dimen>
+    <dimen name="et_height">50dp</dimen>
+    <dimen name="et_corners_radius">39dp</dimen>
+    <dimen name="box_w_and_h">12dp</dimen>
+    <dimen name="corners_images_dim">35dp</dimen>
+    <dimen name="logo_w">120dp</dimen>
+    <dimen name="logo_h">120dp</dimen>
+
+    <dimen name="nav_item_font_size">16sp</dimen>
+    <dimen name="nav_item_drawable_padding">12dp</dimen>
+
+
 </resources>
