--- a/app/src/main/res/layout/activity_details_temp.xml
+++ b/app/src/main/res/layout/activity_details_temp.xml
@@ -140,11 +140,25 @@
 
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/post_detail_map_btn"
+                    android:id="@+id/post_detail_book_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginRight="50dp"
+                    android:background="@drawable/button_shape_green"
+                    android:text="Book Now"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/post_detail_map_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
                     android:layout_marginRight="50dp"
                     android:background="@drawable/button_shape_yellow"
